@@ -94,7 +94,7 @@ public class MappingPolicy implements Cloneable {
     // Note that some property names have more than one base concatenated.
     // See SQL92.properties for examples.
     //
-    
+
     /** @see DatabaseGenerationConstants#DOT */
     static final char DOT = DatabaseGenerationConstants.DOT;
 
@@ -133,7 +133,7 @@ public class MappingPolicy implements Cloneable {
     // Indicator names for properties which describe how class and field
     // names are to be represented in a database.
     //
-    
+
     /** Indicator that property is for a table name. */
     private static final String INDICATOR_TABLE_NAME =
         "table-name"; //NOI18N
@@ -186,7 +186,7 @@ public class MappingPolicy implements Cloneable {
     // potential values for some property names composed of the above bases
     // and indicators.
     //
-    
+
     /** Property value indicating table name must be same as class name. */
     private static final String TABLE_NAME_AS_CLASSNAME =
         "{className}"; //NOI18N
@@ -278,7 +278,7 @@ public class MappingPolicy implements Cloneable {
 
     /** Prefix of column names which are foreign key columns. */
     private static final String FK_PREFIX = "FK_"; //NOI18N
-    
+
     /** Name of the "global" namespace. */
     private static final String GLOBAL_NAMING_SPACE = "GLOBAL"; //NOI18N
 
@@ -314,8 +314,8 @@ public class MappingPolicy implements Cloneable {
     //
     // The above are all constants; below things get "interesting".
     //
-    
-    
+
+
     /** This is the set of all default properties. */
     private static final Properties defaultProps = new Properties();
 
@@ -345,7 +345,7 @@ public class MappingPolicy implements Cloneable {
      * <em>Note that a single counter is used across all namespaces.</em>
      */
     private int counter = 0;
-    
+
     /**
      * Map from namespaces to Set of names defined in each namespace.  Used
      * to ensure uniqueness within namespaces.
@@ -367,7 +367,7 @@ public class MappingPolicy implements Cloneable {
      * Set of reserved words for the default database.
      */
     private static Set defaultReservedWords;
-    
+
     /**
      * Map from the string names of the java types (e.g. "java.lang.String")
      * to a JDBCInfo of information about the corresponding java.sql.Types
@@ -394,7 +394,7 @@ public class MappingPolicy implements Cloneable {
     // Maximum lengths for table, column, and constraint names are
     // vendor-specific.
     //
-    
+
     /** Maximum length of the name of a table. */
     private int tableNameMaxLength;
 
@@ -457,7 +457,7 @@ public class MappingPolicy implements Cloneable {
      /** Logger for warning & error messages */
     private static final Logger logger =
             LogHelperDatabaseGenerator.getLogger();
-    
+
     /** I18N message handler */
     private final static ResourceBundle messages =
             I18NHelper.loadBundle(MappingPolicy.class);
@@ -494,7 +494,7 @@ public class MappingPolicy implements Cloneable {
         jdbcTypes.put("TIMESTAMP", new Integer(Types.TIMESTAMP)); // NOI18N
         jdbcTypes.put("TINYINT", new Integer(Types.TINYINT)); // NOI18N
         jdbcTypes.put("VARCHAR", new Integer(Types.VARCHAR)); // NOI18N
-        
+
         jdbcTypeNames.put(new Integer(Types.BIGINT), "BIGINT"); // NOI18N
         jdbcTypeNames.put(new Integer(Types.BIT), "BIT"); // NOI18N
         jdbcTypeNames.put(new Integer(Types.BLOB), "BLOB"); // NOI18N
@@ -513,7 +513,7 @@ public class MappingPolicy implements Cloneable {
         jdbcTypeNames.put(new Integer(Types.TIMESTAMP), "TIMESTAMP"); // NOI18N
         jdbcTypeNames.put(new Integer(Types.TINYINT), "TINYINT"); // NOI18N
         jdbcTypeNames.put(new Integer(Types.VARCHAR), "VARCHAR"); // NOI18N
-        
+
         try {
 
             // Create and load the default mapping policy.
@@ -562,7 +562,7 @@ public class MappingPolicy implements Cloneable {
         Properties mergedProp = new Properties(defaultProps);
         load(getPropertyFileName(databaseType), mergedProp, false);
         init(mergedProp);
-        instances.put(databaseType, this);        
+        instances.put(databaseType, this);
 
         if (logger.isLoggable(Logger.FINEST)) {
             logger.finest("new MappingPolicy(" // NOI18N
@@ -576,17 +576,17 @@ public class MappingPolicy implements Cloneable {
      * user-specific overrides.
      * @param databaseType a database vendor name as a String.
      * @return MappingPolicy instance corresponding to the provided
-     * database vendor name. 
+     * database vendor name.
      * @throws IOException if there are problems reading the vendor-
-     * specific mappinng policy file 
+     * specific mappinng policy file
      */
     public synchronized static MappingPolicy getMappingPolicy(
            String databaseType) throws IOException {
-               
+
         if (logger.isLoggable(Logger.FINE)) {
             logger.fine("get MappingPolicy"+databaseType); // NOI18N
         }
-        
+
         MappingPolicy mappingPolicy = null;
         try {
             if (databaseType == null) {
@@ -633,57 +633,47 @@ public class MappingPolicy implements Cloneable {
     private synchronized void load(
             final String resourceName, Properties properties, boolean override)
             throws IOException {
- 
+
         if (logger.isLoggable(Logger.FINE)) {
             logger.fine("load resource:" + resourceName); // NOI18N
         }
 
-        InputStream bin = null;
-        InputStream in = null;
-
-        try {
-            if (override) {
-                in = new FileInputStream(resourceName);
-            } else {
-                final ClassLoader loader =
-                        MappingPolicy.class.getClassLoader();
-                in = (InputStream) AccessController.doPrivileged(
-                        new PrivilegedAction() {
-
-                            public Object run() {
-                                Object rc = null;
-                                if (loader != null) {
-                                    rc =loader.getResourceAsStream(
-                                            resourceName);
-                                } else {
-                                    rc =
-                                        ClassLoader.getSystemResourceAsStream(
-                                                resourceName);
-                                }
-                                return rc;
-                            }
-                        });
-                if (in == null) {
-                    throw new IOException(I18NHelper.getMessage(messages,
-                        "EXC_ResourceNotFound", resourceName));// NOI18N
-                }
-            }
-
-            bin = new BufferedInputStream(in);
+        try (InputStream bin = new BufferedInputStream(getInputStream(resourceName, override))) {
             properties.load(bin);
             if (logger.isLoggable(Logger.FINE)) {
                 logger.fine("load "+resourceName + " successfuly"); // NOI18N
             }
-        } finally {
-            try {
-                bin.close();
-                // XXX Need to close both streams in.close();
-            } catch (Exception e) {
-                // ignore
-            }
         }
     }
- 
+
+    private InputStream getInputStream(String resourceName, boolean override) throws IOException {
+        InputStream in;
+        if (override) {
+            in = new FileInputStream(resourceName);
+        } else {
+            final ClassLoader loader =
+                    MappingPolicy.class.getClassLoader();
+            in = (InputStream) AccessController.doPrivileged(
+                    (PrivilegedAction<Object>) () -> {
+                        Object rc = null;
+                        if (loader != null) {
+                            rc =loader.getResourceAsStream(
+                                    resourceName);
+                        } else {
+                            rc =
+                                ClassLoader.getSystemResourceAsStream(
+                                        resourceName);
+                        }
+                        return rc;
+                    });
+            if (in == null) {
+                throw new IOException(I18NHelper.getMessage(messages,
+                    "EXC_ResourceNotFound", resourceName));// NOI18N
+            }
+        }
+        return in;
+    }
+
     /**
      * Resets the namespaces and counter.
      */
@@ -710,8 +700,7 @@ public class MappingPolicy implements Cloneable {
 
                 if (name.equals(USE_UNIQUE_TABLE_NAMES)) {
                     if (! StringHelper.isEmpty(value)) {
-                        uniqueTableName =
-                            Boolean.valueOf(value).booleanValue();
+                        uniqueTableName = Boolean.parseBoolean(value);
                     }
                     continue;
                 }
@@ -725,7 +714,7 @@ public class MappingPolicy implements Cloneable {
                     indicator = nameParser.nextToken();
                 }
 
-                if (indicator.startsWith(INDICATOR_JDBC_PREFIX)) {
+                if (indicator != null && indicator.startsWith(INDICATOR_JDBC_PREFIX)) {
                     setJDBCInfoEntry(userJdbcInfoMap, name, value, indicator);
                 } else {
                     if (logger.isLoggable(Logger.INFO)) {
@@ -759,7 +748,7 @@ public class MappingPolicy implements Cloneable {
 
         // The name is in sqlInfo if it was loaded from one of our
         // vendor-specific properties files.
-        Object o = sqlInfo.get(new Integer(jdbcType));
+        Object o = sqlInfo.get(Integer.valueOf(jdbcType));
         if (null != o) {
             rc = (String) o;
         } else {
@@ -875,9 +864,9 @@ public class MappingPolicy implements Cloneable {
      */
     private JDBCInfo getdbJDBCInfo(String fieldType) {
         JDBCInfo rc = (JDBCInfo) dbJdbcInfoMap.get(fieldType);
-        
+
         if (null == rc) {
-            
+
             // There is also nothing provided for the field's
             // type, so use a BLOB.
             rc = (JDBCInfo) dbJdbcInfoMap.get("BLOB"); // NOI18N
@@ -906,7 +895,7 @@ public class MappingPolicy implements Cloneable {
      */
     public static String getOverrideForLength(
             String className, String fieldName) {
-        
+
         return className
             + DOT + fieldName
             + DOT + DatabaseGenerationConstants.INDICATOR_JDBC_LENGTH;
@@ -922,7 +911,7 @@ public class MappingPolicy implements Cloneable {
      */
     public static String getOverrideForNullability(
             String className, String fieldName) {
-        
+
         return className
             + DOT + fieldName
             + DOT + DatabaseGenerationConstants.INDICATOR_JDBC_NULLABLE;
@@ -938,7 +927,7 @@ public class MappingPolicy implements Cloneable {
      */
     public static String getOverrideForPrecision(
             String className, String fieldName) {
-        
+
         return className
             + DOT + fieldName
             + DOT + DatabaseGenerationConstants.INDICATOR_JDBC_PRECISION;
@@ -954,7 +943,7 @@ public class MappingPolicy implements Cloneable {
      */
     public static String getOverrideForScale(
             String className, String fieldName) {
-        
+
         return className
             + DOT + fieldName
             + DOT + DatabaseGenerationConstants.INDICATOR_JDBC_SCALE;
@@ -970,7 +959,7 @@ public class MappingPolicy implements Cloneable {
      */
     public static String getOverrideForType(
             String className, String fieldName) {
-        
+
         return className
             + DOT + fieldName
             + DOT + DatabaseGenerationConstants.INDICATOR_JDBC_TYPE;
@@ -987,7 +976,7 @@ public class MappingPolicy implements Cloneable {
      */
     public static String getJdbcTypeName(int type) throws
             IllegalArgumentException {
-        String rc = (String) jdbcTypeNames.get(new Integer(type));
+        String rc = (String) jdbcTypeNames.get(Integer.valueOf(type));
         if (null == rc) {
             throw new IllegalArgumentException();
         }
@@ -1000,7 +989,7 @@ public class MappingPolicy implements Cloneable {
     // created from the given name(s), so that the result of looking up a
     // policy might actually be the name that is returned.
     //
-    
+
     /**
      * Returns the name of a table for a given class, as per current policy.
      * @param name Basis for what the returned table should be named, for
@@ -1014,8 +1003,8 @@ public class MappingPolicy implements Cloneable {
     // XXX FIXME: If the user needs to provide a unique name, why do we
     // invoke getUniqueGlobalName on it?
     public String getTableName(String name, String uniqueName) {
-        StringBuffer key =
-            new StringBuffer(name).append(DOT).append(INDICATOR_TABLE_NAME);
+        StringBuilder key =
+            new StringBuilder(name).append(DOT).append(INDICATOR_TABLE_NAME);
         String rc = (String)namingPolicy.get(key.toString());
 
         if (rc == null) {
@@ -1033,7 +1022,7 @@ public class MappingPolicy implements Cloneable {
         } else if (rc.equals(TABLE_NAME_HASH_UPPERCASE)) {
             rc = uniqueName.toUpperCase();
         }
-        
+
         return getUniqueGlobalName(rc, tableNameMaxLength);
     }
 
@@ -1044,19 +1033,19 @@ public class MappingPolicy implements Cloneable {
      * @param fieldName Name of the field for which a column name is returned.
      * @param tableName Name of the table in which the column name is created.
      * @return Name of a column that is unique within the named table.
-     */    
-    public String getColumnName(String className, String fieldName, 
+     */
+    public String getColumnName(String className, String fieldName,
             String tableName) {
 
         // Get column naming policy based on className and fieldName
-        StringBuffer key = new StringBuffer(className)
+        StringBuilder key = new StringBuilder(className)
             .append(DOT).append(fieldName)
             .append(DOT).append(INDICATOR_COLUMN_NAME);
         String rc = (String)namingPolicy.get(key.toString());
 
         if (rc == null) {
             // No fieldName specific policy, so use default for className
-            key = new StringBuffer(className)
+            key = new StringBuilder(className)
                 .append(DOT).append(FIELD_BASE)
                 .append(DOT).append(INDICATOR_COLUMN_NAME);
             rc = (String)namingPolicy.get(key.toString());
@@ -1090,7 +1079,7 @@ public class MappingPolicy implements Cloneable {
             String columnName) {
 
        return getUniqueLocalName(
-               new StringBuffer(tableName)
+               new StringBuilder(tableName)
                    .append(DatabaseConstants.NAME_SEPARATOR)
                    .append(columnName).toString(),
                tableName,
@@ -1099,7 +1088,7 @@ public class MappingPolicy implements Cloneable {
 
     /**
      * Returns the name of a constraint corresponding to the named
-     * relationship. 
+     * relationship.
      * @param relName Name of a relationship.
      * @param uniqueId Id that can be appened to relName to distinguish it
      * from other relNames in the database.  Will be appended only if
@@ -1129,7 +1118,7 @@ public class MappingPolicy implements Cloneable {
 
     /**
      * Returns the name of a PK constraint, unique-ified as required.
-     * @param tableName Name of a table on which a constraint is to be placed. 
+     * @param tableName Name of a table on which a constraint is to be placed.
      * @return Name of a constraint on named table.
      */
     public String getPrimaryKeyConstraintName(String tableName) {
@@ -1217,7 +1206,7 @@ public class MappingPolicy implements Cloneable {
             nameUpper += RESERVED_WORD_UNRESERVER;
             rc += RESERVED_WORD_UNRESERVER;
         }
-        
+
         Set names = (Set) namespaces.get(namespace);
 
         if (names == null) {
@@ -1326,7 +1315,7 @@ public class MappingPolicy implements Cloneable {
     // This method and the 4 subsequent ones initialize a MappingPolicy
     // instance from a give Properties object.
     //
-    
+
     /**
      * Initialize this MappingPolicy as per the values in the given
      * properties.
@@ -1343,7 +1332,7 @@ public class MappingPolicy implements Cloneable {
                 initReservedWords(value);
                 continue;
             }
-                
+
             // The indicator is the last DOT-separated substring in name.
             String indicator = null;
             StringTokenizer nameParser =
@@ -1352,21 +1341,24 @@ public class MappingPolicy implements Cloneable {
                 indicator = nameParser.nextToken();
             }
 
-            if (indicator.equals(INDICATOR_SQL_FORMAT)) {
-                setSqlFormatEntry(name, value);
+            if (indicator != null) {
+                if (indicator.equals(INDICATOR_SQL_FORMAT)) {
+                    setSqlFormatEntry(name, value);
 
-            } else if (indicator.startsWith(INDICATOR_JDBC_PREFIX)) {
-                setJDBCInfoEntry(dbJdbcInfoMap, name, value, indicator);
-                
-            } else if (indicator.equals(INDICATOR_MAXIMUM_LENGTH)) {
-                setLengthEntry(name, value);
-                
-            } else if (indicator.equals(INDICATOR_TABLE_NAME) || 
-                       indicator.equals(INDICATOR_COLUMN_NAME) || 
-                       indicator.equals(INDICATOR_JOIN_TABLE_NAME) || 
-                       indicator.equals(INDICATOR_CONSTRAINT_NAME)) {
-                setNamingEntry(name, value);
+                } else if (indicator.startsWith(INDICATOR_JDBC_PREFIX)) {
+                    setJDBCInfoEntry(dbJdbcInfoMap, name, value, indicator);
 
+                } else if (indicator.equals(INDICATOR_MAXIMUM_LENGTH)) {
+                    setLengthEntry(name, value);
+
+                } else if (indicator.equals(INDICATOR_TABLE_NAME) ||
+                           indicator.equals(INDICATOR_COLUMN_NAME) ||
+                           indicator.equals(INDICATOR_JOIN_TABLE_NAME) ||
+                           indicator.equals(INDICATOR_CONSTRAINT_NAME)) {
+                    setNamingEntry(name, value);
+                } else {
+                    setSQLInfoEntry(name, value);
+                }
             } else {
                 setSQLInfoEntry(name, value);
             }
@@ -1387,12 +1379,10 @@ public class MappingPolicy implements Cloneable {
     //
     // These methods each set a value in one of our maps.
     //
-    
+
     /**
      * Sets a SQL formatting property in this MappingPolicy.
      * @param name Name of the policy property, including its indicator.
-     * @param indicator The indicator, alone, which should start with
-     * "sql-format".
      * @param value Value to be bound to that property.
      */
     private void setSqlFormatEntry(String name, String value) {
@@ -1423,10 +1413,10 @@ public class MappingPolicy implements Cloneable {
 
             } else if (name.startsWith(FOREIGN_KEY_CONSTRAINT_INDICATOR)) {
                 foreignKeyConstraint = value;
-                
+
             } else if (name.startsWith(COLUMN_NULLABILITY_INDICATOR)) {
                 columnNullability = value;
-                
+
             } else if (name.startsWith(LOB_LOGGING_INDICATOR)) {
                 lobLogging = value;
             }
@@ -1534,7 +1524,7 @@ public class MappingPolicy implements Cloneable {
      * Basically, all it's "interesting" values.
      */
     public String toString() {
-        StringBuffer rc = new StringBuffer(
+        StringBuilder rc = new StringBuilder(
             "statementSeparator=" + statementSeparator // NOI18N
             + "\ncreateTableStart=" + createTableStart // NOI18N
             + "\ncreateTableEnd=" + createTableEnd // NOI18N
@@ -1568,7 +1558,7 @@ public class MappingPolicy implements Cloneable {
      * from the next by a newline, with keys separated from values by '='.
      */
     private String stringifyMap(Map m) {
-        StringBuffer rc = new StringBuffer();
+        StringBuilder rc = new StringBuilder();
         for (Iterator i = m.entrySet().iterator(); i.hasNext();) {
             Map.Entry e = (Map.Entry) i.next();
             rc.append(e.getKey()).append("=") // NOI18N
@@ -1584,7 +1574,7 @@ public class MappingPolicy implements Cloneable {
      * line.
      */
     private String stringifySet(Set s) {
-        StringBuffer rc = new StringBuffer();
+        StringBuilder rc = new StringBuilder();
         int count = 0;
         for (Iterator i = s.iterator(); i.hasNext();) {
             rc.append(i.next()).append(" "); // NOI18N
@@ -1596,4 +1586,4 @@ public class MappingPolicy implements Cloneable {
         return rc.toString();
     }
 }
-            
+
