@@ -37,6 +37,7 @@
  * only if the new code is made subject to such option by the copyright
  * holder.
  */
+// Portions Copyright [2018] [Payara Foundation and/or its affiliates]
 
 /*
  * SQLStateManager.java
@@ -3014,8 +3015,8 @@ public class SQLStateManager implements Cloneable, StateManager, TestStateManage
 
             // Add the dependency only if both objects involved
             // in the relationship being removed are already persistent.
-            if (addedInverseFieldSM.state.isPersistentInDataStore()
-                    && addedSM.state.isPersistentInDataStore()) {
+            if (addedInverseFieldSM.state.isPersistentInDataStore() &&
+                    addedSM != null && addedSM.state.isPersistentInDataStore()) {
 
                 // First parameter == null marks a non removable dependency.
                 // RESOLVE: Pass inverseFieldDesc here.
@@ -4397,7 +4398,7 @@ public class SQLStateManager implements Cloneable, StateManager, TestStateManage
 
     public boolean setBooleanField(int fieldNumber, boolean value) {
         assertNotPK(fieldNumber);
-        prepareSetField(fieldNumber, new Boolean(value));
+        prepareSetField(fieldNumber, Boolean.valueOf(value));
         return value;
     }
 
@@ -4408,7 +4409,7 @@ public class SQLStateManager implements Cloneable, StateManager, TestStateManage
 
     public byte setByteField(int fieldNumber, byte value) {
         assertNotPK(fieldNumber);
-        prepareSetField(fieldNumber, new Byte(value));
+        prepareSetField(fieldNumber, Byte.valueOf(value));
         return value;
     }
 
@@ -4419,7 +4420,7 @@ public class SQLStateManager implements Cloneable, StateManager, TestStateManage
 
     public short setShortField(int fieldNumber, short value) {
         assertNotPK(fieldNumber);
-        prepareSetField(fieldNumber, new Short(value));
+        prepareSetField(fieldNumber, Short.valueOf(value));
         return value;
     }
 
@@ -4430,7 +4431,7 @@ public class SQLStateManager implements Cloneable, StateManager, TestStateManage
 
     public int setIntField(int fieldNumber, int value) {
         assertNotPK(fieldNumber);
-        prepareSetField(fieldNumber, new Integer(value));
+        prepareSetField(fieldNumber, Integer.valueOf(value));
         return value;
     }
 
@@ -4441,7 +4442,7 @@ public class SQLStateManager implements Cloneable, StateManager, TestStateManage
 
     public long setLongField(int fieldNumber, long value) {
         assertNotPK(fieldNumber);
-        prepareSetField(fieldNumber, new Long(value));
+        prepareSetField(fieldNumber, Long.valueOf(value));
         return value;
     }
 
@@ -4452,7 +4453,7 @@ public class SQLStateManager implements Cloneable, StateManager, TestStateManage
 
     public char setCharField(int fieldNumber, char value) {
         assertNotPK(fieldNumber);
-        prepareSetField(fieldNumber, new Character(value));
+        prepareSetField(fieldNumber, Character.valueOf(value));
         return value;
     }
 
@@ -4463,7 +4464,7 @@ public class SQLStateManager implements Cloneable, StateManager, TestStateManage
 
     public float setFloatField(int fieldNumber, float value) {
         assertNotPK(fieldNumber);
-        prepareSetField(fieldNumber, new Float(value));
+        prepareSetField(fieldNumber, Float.valueOf(value));
         return value;
     }
 
@@ -4474,7 +4475,7 @@ public class SQLStateManager implements Cloneable, StateManager, TestStateManage
 
     public double setDoubleField(int fieldNumber, double value) {
         assertNotPK(fieldNumber);
-        prepareSetField(fieldNumber, new Double(value));
+        prepareSetField(fieldNumber, Double.valueOf(value));
         return value;
     }
 
